--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,38 @@
 <resources>
     <string name="app_name">BdJobs Design</string>
+    <string name="time_left_for">Time Left for</string>
+    <string name="online_test_for_design">Online Test for Design</string>
+    <string name="colon_">:</string>
+    <string name="_5">5</string>
+    <string name="days">Days</string>
+    <string name="job_name">Bdjobs Test Account - Az1</string>
+    <string name="view_job_details">View Job Details</string>
+    <string name="test_name">Online Test for Design</string>
+    <string name="date_icon">Date icon</string>
+    <string name="date">12 Apr 2022</string>
+    <string name="your_test_schedule_is_given_below">Your test schedule is given below:</string>
+    <string name="date_layout">14 Apr 2022</string>
+    <string name="date_name">Date</string>
+    <string name="time_icon">Time Icon</string>
+    <string name="time">Time</string>
+    <string name="time_time">3:00 PM</string>
+    <string name="contact_no">Contact No</string>
+    <string name="contact_no_text">Contact No</string>
+    <string name="mobile_number">+880 16854 46846</string>
+    <string name="test_venue_info">This test will be held online, so attend this Online Test from home or any convenient place.</string>
+    <string name="user_guide">User Guide</string>
+    <string name="test_instruction">Test Instruction</string>
+    <string name="test_instructions">Test Instructions</string>
+    <string name="sample_test">Sample Test</string>
+    <string name="sample_test_text">Sample Test</string>
+    <string name="confirm">Confirm</string>
+    <string name="confirmed">Confirmed</string>
+    <string name="_12_apr_2022">12 Apr 2022</string>
+    <string name="you_have_confirmed_the_online_test_schedule">You have confirmed the online test schedule.</string>
+    <string name="your_request_has_been_sent_to_the_employer">Your request has been sent to the employer</string>
+    <string name="change">Change</string>
+    <string name="you_can_participate_in_the_test_from_here_to_participate_button_will_be_available_1_hour_before_the_test">You can participate in the test from here. To participate, button will be available 1 hour before the test.</string>
+    <string name="participation_info">Participation Info</string>
+    <string name="user_guide_des">User Guide</string>
+    <string name="test_name_type">Test Name Type</string>
 </resources>
